opa/policies/trusted-registry-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTrustedRegistry
metadata:
  name: only-allow-docker-io
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
